--- a/src/components/three/style.css
+++ b/src/components/three/style.css
@@ -2,4 +2,8 @@
     background-color: skyblue;
     width: 100%;
     height: 100vh;
+    position: absolute;
+    left: 0;
+    top: 0;
+    filter: brightness(50%);
 }
